--- a/sway/tofi/config
+++ b/sway/tofi/config
@@ -1,14 +1,13 @@
-outline-width = 2
-border-width = 2
-padding-left = 11
-padding-top= 11
-padding-bottom = 11
+padding-left = 8
+padding-top= 8
+padding-bottom = 8
 background-color = #161821
-border-width = 0
+border-width = 1
+border-color = #a5abb6
 outline-width = 0
 text-color = #C6C8D1
 font-size = 16
 font = /home/m/.local/share/fonts/font/UbuntuNerdFont.ttf
 selection-color = #e27878
-width = 400
-height = 400
+width = 485
+height = 300
