--- a/terminals/tmux/tmux.conf
+++ b/terminals/tmux/tmux.conf
@@ -4,7 +4,7 @@ set -g status-style bg=default
 set -g status-position top 
 set -s escape-time 0
 set -g automatic-rename on
-set -g allow-rename off
+set -g allow-rename on
 set -g set-titles on
 #   #S = tmux session name
 #   #I = tmux window index
@@ -13,7 +13,7 @@ set -g set-titles on
 #   #h = hostname (short form)
 #   #H = hostname (full form)
 #   #T = pane title (often the command running in it)
-set -g set-titles-string '#W::#h'
+set -g set-titles-string '#h::#W'
 set-option -g history-limit 10000
 
 set -g mode-keys vi
@@ -23,7 +23,9 @@ unbind-key C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-bind c new-window -c "#{pane_current_path}"
+bind a new-window -c "#{pane_current_path}"
+bind x kill-pane
+bind X kill-window
 
 bind j select-pane -L
 bind k select-pane -D
