--- a/sway/sway/config
+++ b/sway/sway/config
@@ -150,7 +150,7 @@ bindsym $mod+s layout toggle split
 ###########  
 # assign window to a workspace with window criteria
 # use swaymsg -t get_tree 
-assign [app_id="spotify"] $ws_main
+assign [class="Spotify"] $ws_main
 assign [app_id="betterbird"] $ws_main
 assign [app_id="org.telegram.desktop"] $ws_main
 assign [app_id="libreoffice"] $ws_office
