--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -8,9 +8,9 @@
 monitor = desc:LG Electronics LG HDR 4K 0x00006D62, 2880x1800@90, 0x0, 1, transform, 3
 # Clamshell mode configuration
 ## Lid is opened
-bindl=,switch:off:Lid Switch,exec,~/.config/hypr/lid.sh open
+#bindl=,switch:off:Lid Switch,exec,~/.config/hypr/lid.sh open
 ## Lid is closed
-bindl=,switch:on:Lid Switch,exec,~/.config/hypr/lid.sh close
+#bindl=,switch:on:Lid Switch,exec,~/.config/hypr/lid.sh close
 
 #############
 ### INPUT ###
@@ -126,7 +126,6 @@ bind = $mainMod, Q, killactive
 bind = esc + $mainMod, Q, exit
 bind = $mainMod, F ,fullscreen
 
-
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
@@ -197,5 +196,3 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
-bindl =  XF86Display, exec, ~/.config/hypr/lid.sh open
