--- a/sway/sway/config
+++ b/sway/sway/config
@@ -16,7 +16,7 @@ include /etc/sway/config.d/*
 #### There is no reason to disable it unless for debugging or 'purist' purposes, is a lightweight process
 #### But when is enebled invalidate Wayland's security model
 #### Xwayland is enabled by default
-xwayland disable
+# xwayland disable
 
 set $mod Mod4
 set $alt Mod1
@@ -129,16 +129,16 @@ bindsym $mod+Tab workspace back_and_forth
 ### containers
 ###########  
 # move focused container to workspace
-bindsym $mod+shift+1 move container to workspace number 1
-bindsym $mod+shift+2 move container to workspace number 2
-bindsym $mod+shift+3 move container to workspace number 3
-bindsym $mod+shift+4 move container to workspace number 4
-bindsym $mod+shift+5 move container to workspace number 5
-bindsym $mod+shift+6 move container to workspace number 6
-bindsym $mod+shift+7 move container to workspace number 7
-bindsym $mod+shift+8 move container to workspace number 8
-bindsym $mod+shift+9 move container to workspace number 9
-bindsym $mod+shift+m move container to workspace $ws_main
+bindsym $mod+control+1 move container to workspace number 1
+bindsym $mod+control+2 move container to workspace number 2
+bindsym $mod+control+3 move container to workspace number 3
+bindsym $mod+control+4 move container to workspace number 4
+bindsym $mod+control+5 move container to workspace number 5
+bindsym $mod+control+6 move container to workspace number 6
+bindsym $mod+control+7 move container to workspace number 7
+bindsym $mod+control+8 move container to workspace number 8
+bindsym $mod+control+9 move container to workspace number 9
+bindsym $mod+control+m move container to workspace $ws_main
 # change layout mode for the focused container
 bindsym $mod+a split horizontal
 bindsym $mod+w layout toggle tabbed stacking
@@ -161,11 +161,11 @@ for_window [app_id="org.pulseaudio.pavucontrol"] floating enable
 for_window [app_id="blueberry.py"] floating enable
 
 # Scratchpad
-bindsym $mod+shift+minus move scratchpad
+bindsym $mod+control+minus move scratchpad
 bindsym $mod+minus scratchpad show
 focus_follows_mouse yes
 # resize window  mode
-bindsym $mod+shift+g exec "notify-send -u critical 'RESIZE MODE' 'Use j, k, l, ; to resize. ESC to exit.' -p > /tmp/resize_notification_id ; swaymsg mode resize"
+bindsym $mod+control+g exec "notify-send -u critical 'RESIZE MODE' 'Use j, k, l, ; to resize. ESC to exit.' -p > /tmp/resize_notification_id ; swaymsg mode resize"
 mode "resize" {
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
@@ -189,15 +189,15 @@ bindsym $mod+control+l move up
 bindsym $mod+control+semicolon move right
 
 # kill focused window
-bindsym $mod+shift+q kill
+bindsym $mod+control+q kill
 # fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
-bindsym $mod+shift+space floating toggle
-bindsym $mod+shift+f focus mode_toggle
+bindsym $mod+control+space floating toggle
+bindsym $mod+control+f focus mode_toggle
 
 bindsym button7 nop  
-bindsym $mod+shift+r reload
-bindsym $mod+shift+e exec swaynag -t warning -m 'Exit?' -B 'Y' 'swaymsg exit'
+bindsym $mod+control+r reload
+bindsym $mod+control+e exec swaynag -t warning -m 'Exit?' -B 'Y' 'swaymsg exit'
 
 
 ###########  
