--- a/linux/helix/config.toml
+++ b/linux/helix/config.toml
@@ -12,3 +12,10 @@ select = "underline"
 
 [editor.file-picker]
 hidden = false
+
+[editor.soft-wrap]
+enable = true
+wrap-indicator = ""
+
+[editor.whitespace]
+newline = "none"
