--- a/linux/fuzzel/fuzzel.ini
+++ b/linux/fuzzel/fuzzel.ini
@@ -1,16 +1,19 @@
+[colors]
+background=2E3440fa
+selection=D8DEE9fa
+border=D8DEE9fa 
+text=D8DEE9fa
+prompt=D8DEE9fa
+input=D8DEE9fa
+
+[main]
+lines=4
+line-height=25
 width=25
 font=/home/m/.local/share/fonts/font/UbuntuNerdFont.ttf
-line-height=50
 fields=name,generic,comment,categories,filename,keywords
-terminal=foot -e
-prompt="❯   "
-show-actions=yes
+match-mode=fuzzy
+filter-desktop=yes
+show-actions=no
 exit-on-keyboard-focus-loss=no
-
-[colors]
-background=282a36fa
-selection=C6C8D1fa
-border=a5abb6fa
-
-[border]
-radius=200
+terminal=alacritty -e
