--- a/linux/fuzzel/fuzzel.ini
+++ b/linux/fuzzel/fuzzel.ini
@@ -5,15 +5,19 @@ border=D8DEE9fa
 text=D8DEE9fa
 prompt=D8DEE9fa
 input=D8DEE9fa
+match=D8DEE9fa
+selection-match=2E3440fa
+selection-text=2E3440fa
 
 [main]
 lines=4
 line-height=25
 width=25
 font=/home/m/.local/share/fonts/font/UbuntuNerdFont.ttf
-fields=name,generic,comment,categories,filename,keywords
+fields=name,generic,comment,categories,keywords
 match-mode=fuzzy
 filter-desktop=yes
 show-actions=no
 exit-on-keyboard-focus-loss=no
 terminal=alacritty -e
+icons-enabled=true
