--- a/linux/sway/config
+++ b/linux/sway/config
@@ -1,15 +1,7 @@
-
-
-####         ####
-####         ####
-#### General ####
-####         ####
-
 #### Default Sway startup scripts
 #### Synchronizes environment variables with systemd and D-Bus 
 #### Ensure proper Wayland session integration for user applications and services
 include /etc/sway/config.d/*
-
 #### Xwayland is an X server that runs as a Wayland client, translating X11 calls to Wayland
 #### so that applications built for X11 can still function even though the system is running on Wayland 
 #### Most applications don't need it es. Chromium or Firefox, but it is required by some applications es. Steam or VLC
@@ -17,24 +9,22 @@ include /etc/sway/config.d/*
 #### But when is enebled invalidate Wayland's security model
 #### Xwayland is enabled by default
 # xwayland disable
-
 set $mod Mod4
 set $alt Mod1
 tiling_drag disabled
-#### My app launcher
+focus_follows_mouse yes
+# My app launcher
 set $menu fuzzel
-#### My terminal emulator
+# My terminal emulator
 set $term alacritty
+# My background image
+output * bg /home/m/Dotfiles/Nighthawks_by_Edward_Hopper_1942.jpg fill
 
-
-####                  ####
-####                  ####
-#### Inputs & Outputs ####
-####                  ####
-
+###########  
+### i/o
+###########  
 set $laptop_display "eDP-1"
 set $laptop_keyboard "1:1:AT_Translated_Set_2_keyboard"
-
 # check inputs names with: swaymsg -t get_intputs
 # check outputs names with: swaymsg -t get_outputs
 # My laptop i/o 
@@ -46,9 +36,6 @@ input  $laptop_keyboard {
 input "2:10:TPPS/2_Elan_TrackPoint" {
     pointer_accel -1
 }
-
-#### My background image
-output * bg /home/m/Dotfiles/Nighthawks_by_Edward_Hopper_1942.jpg fill
 # 27" external displays
 output * {
     scale 1.5 
@@ -65,7 +52,6 @@ output $laptop_display {
 # if the lid is closed whith an external monitor then disable it
 bindswitch --reload --locked lid:on output $laptop_display disable
 bindswitch --reload --locked lid:off output $laptop_display enable
-
 
 ###########  
 ### system
@@ -93,7 +79,8 @@ bindsym XF86Display exec swaymsg output $laptop_display toggle
 bindsym Print exec grim -g "$(slurp)" - | wl-copy
 bindsym control+Print exec grim - | wl-copy
 bindsym $mod+grave exec hyprpicker | wl-copy
-
+# zen mode
+bindsym $mod+z exec fish -c 'if pgrep -x waybar >/dev/null 2>&1; killall waybar; dunstctl set-paused true; else; nohup waybar >/dev/null 2>&1 & dunstctl set-paused false; end'
 
 ###########  
 ### workspaces
@@ -125,7 +112,6 @@ bindsym $mod+m workspace $ws_main
 bindsym $mod+comma workspace prev
 bindsym $mod+period workspace next
 bindsym $mod+Tab workspace back_and_forth
-
 
 ###########  
 ### containers
@@ -161,13 +147,11 @@ assign [app_id="com.transmissionbt*"] $ws_stuff
 # floating windows for daemonized programs 
 for_window [app_id="org.pulseaudio.pavucontrol"] floating enable
 for_window [app_id="blueberry.py"] floating enable
-
 # resize window 
 bindsym $mod+equal resize grow width 10 px or 10 ppt
 bindsym $mod+minus resize shrink width 10 px or 10 ppt
 bindsym $mod+shift+equal resize grow height 10 px or 10 ppt
 bindsym $mod+shift+minus resize shrink height 10 px or 10 ppt
-
 # focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -192,43 +176,70 @@ bindsym $mod+control+space floating toggle
 bindsym button7 nop  
 bindsym $mod+control+r reload
 
-
 ###########  
-### global style
+### style
 ###########  
 font pango:Ubuntu Nerd Font, bold 10
 gaps inner 2
 gaps outer 2
-default_border pixel 2
-
-# color class           border  backgr  text    indicator
-client.focused          #a5abb6 #a5abb6 #161821 #64727D
-client.focused_inactive #161821 #161821 #a5abb6 #64727D
-client.unfocused        #161821 #161821 #a5abb6 #64727D
-client.urgent           #64727D #64727D #161821 #64727D
-client.placeholder      #161821 #161821 #a5abb6 #64727D
-client.background               #161821
-
-
+smart_gaps on
+default_border pixel 0
+#2E3440  nord0    black
+#3B4252  nord1    dark_gray
+#434C5E  nord2    gray
+#4C566A  nord3    light_gray
+#D8DEE9  nord4    darkest_white
+#E5E9F0  nord5    darker_white
+#ECEFF4  nord6    white
+#8FBCBB  nord7    teal
+#88C0D0  nord8    off_blue
+#81A1C1  nord9    glacier
+#5E81AC  nord10   blue
+#BF616A  nord11   red
+#D08770  nord12   orange
+#EBCB8B  nord13   yellow
+#A3BE8C  nord14   green
+#B48EAD  nord15   purple
+set $black                #2E3440
+set $dark_gray            #3B4252
+set $gray                 #434C5E
+set $light_gray           #4C566A
+set $darkest_white        #D8DEE9
+set $darker_white         #E5E9F0
+set $white                #ECEFF4
+set $teal                 #8FBCBB
+set $off_blue             #88C0D0
+set $glacier              #81A1C1
+set $blue                 #5E81AC 
+set $red                  #BF616A
+set $orange               #D08770
+set $yellow               #EBCB8B
+set $green                #A3BE8C
+set $purple               #B48EAD
+#light_graycolor_class    border          backgrount      text            indicator       child_border
+client.focused            $darkest_white  $darkest_white  $black          $darkest_white  $darkest_white
+client.focused_tab_title  $black          $darkest_white  $black                          
+client.focused_inactive   $black          $black          $darkest_white  $darkest_white  $black
+client.unfocused          $black          $black          $darkest_white  $darkest_white  $darkest_white
+client.urgent             $darkest_white  $darkest_white  $black          $darkest_white  $darkest_white
+client.placeholder        $black          $black          $darkest_white  $darkest_white  $darkest_white
+client.background         $black                                                          
 ###########  
-### status bar
+### bar
 ###########  
 bar {
     swaybar_command waybar
 }
 
-
 ###########  
-### apps on startup
+### apps
 ###########  
 # My notification daemon
-exec mako
+exec dunst
 # Adjust screen color temperature based on location/time
 exec gammastep
 # My apps
-exec firefox-developer-edition
+exec chromium
 exec $term
 exec betterbird
 exec Telegram
-
-
