--- a/linux/fuzzel/fuzzel.ini
+++ b/linux/fuzzel/fuzzel.ini
@@ -1,16 +1,20 @@
 [colors]
 background=2E3440fa
-selection=D8DEE9fa
+selection=2E3440fa
 border=D8DEE9fa 
 text=D8DEE9fa
 prompt=D8DEE9fa
 input=D8DEE9fa
 match=D8DEE9fa
-selection-match=2E3440fa
-selection-text=2E3440fa
+selection-match=D8DEE9fa
+selection-text=D8DEE9fa
+
+[border]
+width=2
+radius=2
 
 [main]
-lines=4
+lines=6
 line-height=25
 width=25
 font=/home/m/.local/share/fonts/font/UbuntuNerdFont.ttf
@@ -21,3 +25,6 @@ show-actions=no
 exit-on-keyboard-focus-loss=no
 terminal=alacritty -e
 icons-enabled=true
+hide-prompt=true
+horizontal-pad=6
+vertical-pad=4
