--- a/linux/fuzzel/fuzzel.ini
+++ b/linux/fuzzel/fuzzel.ini
@@ -1,22 +1,18 @@
 [colors]
 background=2E3440fa
-selection=2E3440fa
+selection=D9DEE9fa 
 border=D8DEE9fa 
 text=D8DEE9fa
 prompt=D8DEE9fa
 input=D8DEE9fa
 match=D8DEE9fa
-selection-match=D8DEE9fa
-selection-text=D8DEE9fa
-
-[border]
-width=2
-radius=2
+selection-match=2E3440fa
+selection-text=2E3440fa
 
 [main]
-lines=6
-line-height=25
-width=25
+lines=3
+line-height=32
+width=22
 font=/home/m/.local/share/fonts/font/UbuntuNerdFont.ttf
 fields=name,generic,comment,categories,keywords
 match-mode=fuzzy
@@ -25,6 +21,6 @@ show-actions=no
 exit-on-keyboard-focus-loss=no
 terminal=alacritty -e
 icons-enabled=true
-hide-prompt=true
+hide-prompt=false
 horizontal-pad=6
 vertical-pad=4
