--- a/linux/waybar/config.jsonc
+++ b/linux/waybar/config.jsonc
@@ -84,10 +84,10 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% {icon} ",
-        "format-charging": "",
        	"interval": 1,
-        "format-plugged": "",
+        "format": "{capacity}% {icon} ",
+        "format-charging": "{capacity}%  ",
+        "format-plugged": "{capacity}%  ",
         "format-icons": ["", "", "", "", ""]
     },
     "power-profiles-daemon": {
